--- a/api/package.json
+++ b/api/package.json
@@ -26,13 +26,20 @@
     "stripe": "^16.6.0",
     "@nestjs/graphql": "^12.0.0",
     "@nestjs/apollo": "^12.0.0",
+    "@apollo/gateway": "^2.9.0",
     "graphql": "^16.8.1",
+    "redis": "^4.6.13",
+    "ws": "^8.18.0",
+    "ts-morph": "^22.0.0"
     "apollo-server-express": "^3.13.0",
     "@sentry/node": "^8.30.0",
     "pino": "^9.0.0",
     "pino-http": "^10.0.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/js-yaml": "^4.0.9",
+    "@types/ws": "^8.5.10"
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
